@@ -1,25 +1,22 @@
 package com.sparta.logistics.client.hub.service;
 
 
+import com.sparta.logistics.client.hub.common.exception.HubException;
 import com.sparta.logistics.client.hub.dto.HubRequestDto;
 import com.sparta.logistics.client.hub.dto.HubResponseDto;
 import com.sparta.logistics.client.hub.model.Hub;
 import com.sparta.logistics.client.hub.repository.HubRepository;
-import jakarta.persistence.EntityNotFoundException;
+import com.sparta.logistics.common.type.ApiResultError;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,7 +27,7 @@ public class HubService {
     // 허브 생성 메서드
     // 새로운 허브가 생성되면 전체 허브의 변화가 생겼기 때문에 삭제 필요
     @CacheEvict(cacheNames = "hubAllCache", allEntries = true)
-    public HubResponseDto createHub(HubRequestDto requestDto) {
+    public HubResponseDto createHub(HubRequestDto requestDto) throws HubException {
         // DTO를 사용하여 Hub 객체 생성
         Hub hub = Hub.createHubInfoBuilder()
                 .hubRequestDto(requestDto)
@@ -40,15 +37,18 @@ public class HubService {
     }
 
     @Cacheable(cacheNames = "hubAllCache", key = "getMethodName()")
-    public List<HubResponseDto> getAllHubs() {
-        List<Hub> hubs = hubRepository.findAllByIsDeletedFalse();
-        return hubs.stream().map(HubResponseDto::of).toList();
+    @Transactional(readOnly = true)
+    public List<HubResponseDto> getAllHubs() throws HubException {
+        return hubRepository.findAllByIsDeletedFalse().stream()
+                .map(HubResponseDto::of)
+                .collect(Collectors.toList());
     }
 
     @Cacheable(cacheNames = "hubCache", key = "#hubId")
-    public HubResponseDto getHubById(UUID hubId) {
+    @Transactional(readOnly = true)
+    public HubResponseDto getHubById(UUID hubId) throws HubException {
         Hub hub = hubRepository.findByHubId(hubId)
-                .orElseThrow(() -> new EntityNotFoundException("허브를 찾을 수 없습니다. ID: " + hubId));
+                .orElseThrow(() -> new HubException(ApiResultError.HUB_NO_EXIST));
         return HubResponseDto.of(hub);
     }
 
@@ -56,9 +56,10 @@ public class HubService {
     @CachePut(cacheNames = "hubCache", key = "#p0")
     @CacheEvict(cacheNames = "hubAllCache", allEntries = true)
     @Transactional
-    public HubResponseDto updateHub(UUID hubID, HubRequestDto requestDto) {
-        Hub hub = hubRepository.findByHubId(hubID)
-                .orElseThrow(() -> new EntityNotFoundException("허브를 찾을 수 없습니다."));
+    public HubResponseDto updateHub(UUID hubId, HubRequestDto requestDto) throws HubException {
+        // TODO : 권한 관리 : 생성,수정,삭제는 마스터 관리자만 가능
+        Hub hub = hubRepository.findByHubId(hubId)
+                .orElseThrow(() -> new HubException(ApiResultError.HUB_NO_EXIST));
 
         hub.update(requestDto);
         return HubResponseDto.of(hubRepository.save(hub));
@@ -66,19 +67,30 @@ public class HubService {
 
     @Transactional
     @CacheEvict(cacheNames = {"hubAllCache", "hubCache"}, key = "#hubId")
-    public void deleteHub(UUID hubId) {
+    public void deleteHub(UUID hubId) throws HubException {
         Hub hub = hubRepository.findByHubId(hubId)
-                .orElseThrow(() -> new EntityNotFoundException("허브를 찾을 수 없습니다. ID: " + hubId));
+                .orElseThrow(() -> new HubException(ApiResultError.HUB_NO_EXIST));
         hub.softDelete();
         hubRepository.save(hub);
     }
 
-    public Hub findHubById(UUID hubId) {
-        return hubRepository.findByHubId(hubId).orElseThrow(NoSuchElementException::new);
+    public Hub findHubById(UUID hubId) throws HubException {
+        return hubRepository.findByHubId(hubId)
+                .orElseThrow(() -> new HubException(ApiResultError.HUB_NO_EXIST));
     }
 
     // 허브 존재 확인 메서드
     public boolean existsHubById(UUID hubId) {
         return hubRepository.existsById(hubId);
+    }
+
+    public List<HubResponseDto> searchHubs(String name, String address) throws HubException {
+
+        List<Hub> hubs = hubRepository.searchHubs(name, address);
+
+        if (hubs.isEmpty()) {
+            throw new HubException(ApiResultError.SEARCH_NO_RESULT);
+        }
+        return hubs.stream().map(HubResponseDto::of).collect(Collectors.toList());
     }
 }
